--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Sply-350</h5>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike-360</h5>
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
@@ -197,6 +197,61 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="container">
+            <h1>Bagpack</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Awesome Bag</h5>
+                            <h2>$120</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="ms-3">
+                            <button type="button" class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Awesome Bag</h5>
+                            <h2>$320</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+
+                        </div>
+                        <div class="ms-3">
+                            <button type="button" class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Awesome Bag</h5>
+                            <h2>$159</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="ms-3">
+                            <button type="button" class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-5" style="background-color: #FFF2F1
+        ;">
+            <h2>LET'S STAY IN TOUCH</h2>
+            <span>Get updates on sales, specials and more</span><br>
+            <input type="text" class="form-control w-25" aria-label="Text input with checkbox">
         </section>
     </main>
 
