--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- Bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- nav ber -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""
                         class="d-inline-block align-text-top"></a>
@@ -28,13 +30,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#Shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#Backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +44,7 @@
         </nav>
 
         <!-- img Slider -->
-        <section class="container rounded">
+        <section class="container mt-5">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -60,7 +62,7 @@
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
                                 <h1>$420</h1>
-                                <button type="button" class="btn btn-warning">buy Now</button>
+                                <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
                             <div class="col-lg-5">
@@ -78,7 +80,7 @@
 
                                 </p>
                                 <h1>$600</h1>
-                                <button type="button" class="btn btn-warning">buy Now</button>
+                                <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
                             <div class="col-lg-5">
@@ -95,7 +97,7 @@
 
                                 </p>
                                 <h1>$1200</h1>
-                                <button type="button" class="btn btn-warning">buy Now</button>
+                                <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
                             <div class="col-lg-5">
@@ -122,30 +124,31 @@
         <!-- Catagoris -->
         <section class="container">
             <div class="row g-4 my-5">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="p-3 border d-flex align-items-center justify-content-between bg-warning rounded-3">
                         <h1 class="text-white">Watch</h1>
-                        <img src="images/categories/watch.png" alt="">
+                        <img width="100px" src="images/categories/watch.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div
                         class="p-3 border d-flex align-items-center justify-content-between bg-danger bg-gradient rounded-3">
                         <h1 class="text-white">Bag</h1>
-                        <img src="images/categories/bag.png" alt="">
+                        <img width="100px" src="images/categories/bag.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div
                         class="p-3 border d-flex align-items-center justify-content-between bg-primary bg-gradient rounded-3">
                         <h1 class="text-white">Shoes</h1>
-                        <img src="images/categories/shoes.png" alt="">
+                        <img width="100px" src="images/categories/shoes.png" alt="">
                     </div>
                 </div>
 
             </div>
         </section>
-        <section class="container">
+        <!-- Shoes -->
+        <section class="container" id="Shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
@@ -160,7 +163,7 @@
                             <h2>$120</h2>
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -176,7 +179,7 @@
                             <h2>$320</h2>
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -192,13 +195,14 @@
                             <h2>$350</h2>
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="container">
+        <!-- Backpack -->
+        <section class="container  my-5" id="Backpack">
             <h1>Bagpack</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
@@ -211,7 +215,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -226,7 +230,7 @@
 
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -241,22 +245,28 @@
                                 height action.</p>
                         </div>
                         <div class="ms-3">
-                            <button type="button" class="btn btn-warning">buy Now</button>
+                            <button type="button" class="btn button-color">buy Now</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="container mt-5" style="background-color: #FFF2F1
-        ;">
-            <h2>LET'S STAY IN TOUCH</h2>
-            <span>Get updates on sales, specials and more</span><br>
-            <input type="text" class="form-control w-25" aria-label="Text input with checkbox">
+
+        <!-- subscribe section -->
+        <section class="container mt-5 d-flex justify-content-center align-items-center rounded-3"
+            style="background-color: #FFF2F1; height: 250px;" id="Subscribe">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <span>Get updates on sales, specials and more</span><br>
+                <input type="text" class="form-control" placeholder="Enter Your Email"
+                    aria-label="Text input with checkbox">
+                <button class="button-color border-0" type="submit">SUBMIT</button>
+            </div>
         </section>
     </main>
 
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
 
 
