--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda Ecomarce</title>
+    <title>Panda Commerce</title>
+    <!-- fav icon -->
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
     <!-- Bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- coustom style -->
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
@@ -61,7 +64,7 @@
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
-                                <h1>$420</h1>
+                                <h1 class="Slider-price-color">$420</h1>
                                 <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
@@ -79,7 +82,7 @@
                                     of fake sports.
 
                                 </p>
-                                <h1>$600</h1>
+                                <h1 class="Slider-price-color">$600</h1>
                                 <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
@@ -96,7 +99,7 @@
                                     tv.
 
                                 </p>
-                                <h1>$1200</h1>
+                                <h1 class="Slider-price-color">$1200</h1>
                                 <button type="button" class="btn button-color">buy Now</button>
 
                             </div>
@@ -253,20 +256,24 @@
         </section>
 
         <!-- subscribe section -->
-        <section class="container mt-5 d-flex justify-content-center align-items-center rounded-3"
+        <section class="container mt-5 d-flex justify-content-center align-items-center rounded-3 lh-lg"
             style="background-color: #FFF2F1; height: 250px;" id="Subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
-                <span>Get updates on sales, specials and more</span><br>
-                <input type="text" class="form-control" placeholder="Enter Your Email"
-                    aria-label="Text input with checkbox">
-                <button class="button-color border-0" type="submit">SUBMIT</button>
+                <span class="text-black-75">Get updates on sales, specials and more</span><br>
+                <div class="input-group mb-3">
+                    <input type="email" class="form-control" placeholder="Enter Your Email"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary button-color border-0  px-4" type="button"
+                        id="button-addon2">SUBMIT</button>
+                </div>
             </div>
         </section>
     </main>
 
     <footer class="mt-5 text-center">
-        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+        <p><span class="copy-right-symble">©</span> 2021. Panda Commerce. All rights reserved. Atik sabab, Bangladesh.
+        </p>
     </footer>
 
 
